--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Klix</title>
     </head>
     <body>
-        
+        <header>
+            
+        </header>
+
+
+
+
+
+
+
+
+        <script src="script.js"></script>
     </body>
 </html>
