--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
         <title>Klix</title>
     </head>
     <body>
         <header>
-            
+
         </header>
 
 
@@ -17,7 +18,30 @@
 
 
 
+        <footer>
+            <ul>
+                <li><a href="#">Početna</a></li>
+                <li><a href="#">Dojavite vijest</a></li>
+                <li><a href="#">Impressum</a></li>
+                <li><a href="#">Komentari</a></li>
+                <li><a href="#">Kontakt</a></li>
+                <li><a href="#">O nama</a></li>
+                <li><a href="#">Oglašavanje</a></li>
+                <li><a href="#">Privatnost</a></li>
+                <li><a href="#">Sigurnost</a></li>
+            </ul>
 
+            <ul>
+                <li>Pratite nas</li>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </ul>
+
+            <p>Copyright 2000-2023 InterSoft d.o.o. Sarajevo. ISSN 2566-3771. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
+
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
