--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-
+            <h1>Pocetna stranica<h1>
         </header>
 
 
@@ -17,18 +17,17 @@
 
 
 
-
         <footer>
-            <ul>
-                <li><a href="#">Početna</a></li>
-                <li><a href="#">Dojavite vijest</a></li>
-                <li><a href="#">Impressum</a></li>
-                <li><a href="#">Komentari</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">O nama</a></li>
-                <li><a href="#">Oglašavanje</a></li>
-                <li><a href="#">Privatnost</a></li>
-                <li><a href="#">Sigurnost</a></li>
+            <ul class="footerlokacije">
+                <li class="lokacija"><a href="#">Početna</a></li>
+                <li class="lokacija"><a href="#">Dojavite vijest</a></li>
+                <li class="lokacija"><a href="#">Impressum</a></li>
+                <li class="lokacija"><a href="#">Komentari</a></li>
+                <li class="lokacija"><a href="#">Kontakt</a></li>
+                <li class="lokacija"><a href="#">O nama</a></li>
+                <li class="lokacija"><a href="#">Oglašavanje</a></li>
+                <li class="lokacija"><a href="#">Privatnost</a></li>
+                <li class="lokacija"><a href="#">Sigurnost</a></li>
             </ul>
 
             <ul>
