--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
         <title>Klix</title>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <header>
@@ -19,15 +21,15 @@
 
         <footer>
             <ul class="footerlokacije">
-                <li class="lokacija"><a href="#">Početna</a></li>
-                <li class="lokacija"><a href="#">Dojavite vijest</a></li>
-                <li class="lokacija"><a href="#">Impressum</a></li>
-                <li class="lokacija"><a href="#">Komentari</a></li>
-                <li class="lokacija"><a href="#">Kontakt</a></li>
-                <li class="lokacija"><a href="#">O nama</a></li>
-                <li class="lokacija"><a href="#">Oglašavanje</a></li>
-                <li class="lokacija"><a href="#">Privatnost</a></li>
-                <li class="lokacija"><a href="#">Sigurnost</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Početna</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Dojavite vijest</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Impressum</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Komentari</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Kontakt</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">O nama</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Oglašavanje</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Privatnost</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Sigurnost</a></li>
             </ul>
 
             <ul>
