--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </header>
 
 
-
+        <main>
+            <img src="klix.jpg">
+            
+        </main>
 
 
 
@@ -32,12 +35,14 @@
                 <li class="lokacija"><a href="#" class="lokacija-a">Sigurnost</a></li>
             </ul>
 
-            <ul>
-                <li>Pratite nas</li>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-youtube"></i>
+            <ul class="footerikone">
+                <li class="icon">Pratite nas</li>
+                <div class="alignemnt-icons">
+                <li class="icon"><i class="fa-brands fa-facebook"></i></li>
+                <li class="icon"><i class="fa-brands fa-x-twitter"></i></li>
+                <li class="icon"><i class="fa-brands fa-instagram"></i></li>
+                <li class="icon"><i class="fa-brands fa-youtube"></i></li>
+            </div>
             </ul>
 
             <p>Copyright 2000-2023 InterSoft d.o.o. Sarajevo. ISSN 2566-3771. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
