--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 
             <ul class="footerikone">
                 <li class="icon">Pratite nas</li>
+
                 <div class="alignemnt-icons">
-                <li class="icon"><i class="fa-brands fa-facebook"></i></li>
-                <li class="icon"><i class="fa-brands fa-x-twitter"></i></li>
-                <li class="icon"><i class="fa-brands fa-instagram"></i></li>
-                <li class="icon"><i class="fa-brands fa-youtube"></i></li>
-            </div>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+                </div>
             </ul>
 
             <p>Copyright 2000-2023 InterSoft d.o.o. Sarajevo. ISSN 2566-3771. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
