--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </ul>
 
-            <p>Copyright 2000-2023 InterSoft d.o.o. Sarajevo. ISSN 2566-3771. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
+            <p>Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
 
         </footer>
         <script src="script.js"></script>
