--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 
         <main>
-            <img src="klix.jpg">
+            <img src="klix1.jpg">
+            <img src="klix2.jpg">
 
             
         </main>
