--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
         <main>
-            <img src="klix1.jpg">
-            <img src="klix2.jpg">
+            <a href="klix.jpg" width="100px" height="100px">
+          
 
             
         </main>
