--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 
         <main>
-            <a href="klix.jpg" width="100px" height="100px">
+            <img src="./assets/klix.jpg" width="100px" height="100px">
           
 
-            
+            <img src="./assets/klix1.jpg"
         </main>
 
 
