--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
 
         <main>
-            <img src="./assets/klix.jpg" width="100px" height="100px">
+            <img src="./assets/klix.jpg" width="300vw" height="300vh">
           
 
-            <img src="./assets/klix1.jpg"
+            <img src="./assets/klix1.jpg" width="300vw" height="300vh">
+
+
         </main>
 
 
