--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     </head>
     <body>
         <header>
-            <h1>Pocetna stranica<h1>
+         <!---<h1>Pocetna stranica<h1> /* --> 
+                <ul class="header-topics">
+                    <li>Vijesti</li>
+                    <li>Biznis</li>
+                    <li>Sport</li>
+                    <li>Magazin</li>
+                    <li>Lifestyle</li>
+                    <li>Scitech</li>
+                    <li>Auto</li>
+                    <li>Krizaljka</li>
+                    <li>Posao</li>
+                    <li>Forum</li>
+                </ul>
         </header>
 
         <main>
