--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" type="x-icon" href="viber_image_2024-04-23_22-30-20-279.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
@@ -32,8 +33,9 @@
                 <img src="./assets/klix.jpg" alt="Image">
                 <div class="news-content">
                     <h2>News Title</h2>
-                    <p>News description goes here...</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <p>U jutarnjim satima desila se nesreca...</p>
+                    <a href="" class="read-more">Read more</a>
+
                 </div>
             </div>
             
@@ -44,7 +46,7 @@
                 <img src="./assets/klix1.jpg" alt="Image">
                 <div class="news-content">
                     <h2>News Title</h2>
-                    <p>News description goes here...</p>
+                    <p>Taksista optuzen za pljackanje zene(36) u Tuzli...</p>
                     <a href="#" class="read-more">Read more</a>
                 </div>
             </div>
