--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="news-container">
                 <img src="./assets/klix.jpg" alt="Image">
                 <div class="news-content">
-                    <h2>News Title</h2>
+                    <h2>NESRECA NA CESTI</h2>
                     <p>U jutarnjim satima desila se nesreca...</p>
-                    <a href="" class="read-more">Read more</a>
+                    <a href="sudar.html" class="read-more">Read more</a>
 
                 </div>
             </div>
@@ -45,9 +45,9 @@
             <div class="news-container">
                 <img src="./assets/klix1.jpg" alt="Image">
                 <div class="news-content">
-                    <h2>News Title</h2>
+                    <h2> NEPOSTENI TAKSISTA</h2>
                     <p>Taksista optuzen za pljackanje zene(36) u Tuzli...</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <a href="taksi.html" class="read-more">Read more</a>
                 </div>
             </div>
             
