--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
         </header>
 
         <main>
+
+            <div class="ContainerRow2">
             <div class="news-container">
                 <img src="./assets/klix.jpg" alt="Image">
                 <div class="news-content">
-                    <h2>News Title</h2>
+                    <h2>SUDAR NA CESTI</h2>
                     <p>U jutarnjim satima desila se nesreca...</p>
                     <a href="" class="read-more">Read more</a>
 
@@ -45,11 +47,12 @@
             <div class="news-container">
                 <img src="./assets/klix1.jpg" alt="Image">
                 <div class="news-content">
-                    <h2>News Title</h2>
+                    <h2>NEPOSTENI TAKSISTA</h2>
                     <p>Taksista optuzen za pljackanje zene(36) u Tuzli...</p>
                     <a href="#" class="read-more">Read more</a>
                 </div>
             </div>
+        </div>
             
             
 
