--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="news-content">
                     <h2>News Title</h2>
                     <p>Taksista optuzen za pljackanje zene(36) u Tuzli...</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <a href="taksi.html" class="read-more">Read more</a>
                 </div>
             </div>
             
