--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="./assets/klix1.jpg" alt="Image">
                 <div class="news-content">
                     <h2>News Title</h2>
-                    <p>Taksista optuzen za pljackanje zene(36) u Tuzli...</p>
+                    <p>Taksista optuzen za pljackanje zene(36) u Sarajevu...</p>
                     <a href="taksi.html" class="read-more">Read more</a>
                 </div>
             </div>
