--- a/taksi.html
+++ b/taksi.html
@@ -7,6 +7,8 @@
 
         <h1>NEPOSTENI TAKSISTA</h1>
 
-        <p>Danas u vecernjim satima na Marijinom dvoru </p>
+        <p>Danas u vecernjim satima na Marijinom dvoru desio se incident. <br>
+           Taksista M.E.(56) opljackao je zenu S.R(36). Ona je potvrdila da <br>
+        joj je prijetio nozem i da je morala predati pare. </p>
     </body>
 </html>
