--- a/taksi.html
+++ b/taksi.html
@@ -9,6 +9,8 @@
 
         <p>Danas u vecernjim satima na Marijinom dvoru desio se incident. <br>
            Taksista M.E.(56) opljackao je zenu S.R(36). Ona je potvrdila da <br>
-        joj je prijetio nozem i da je morala predati pare. </p>
+        joj je prijetio nozem i da je morala predati pare. Uspjela je pozvati policiju <br>
+    i uhvatili su nadleznog. Izgubio je pravo na posao i otplatio je kaznu od <br>
+5 000 maraka. </p>
     </body>
 </html>
