--- a/taksi.html
+++ b/taksi.html
@@ -12,5 +12,8 @@
         joj je prijetio nozem i da je morala predati pare. Uspjela je pozvati policiju <br>
     i uhvatili su nadleznog. Izgubio je pravo na posao i otplatio je kaznu od <br>
 5 000 maraka. </p>
+
+<img src="./assets/klix5.jpg" alt="Image">
+<img src="./assets/klix6.jpg" alt="Image">
     </body>
 </html>
