--- a/taksi.html
+++ b/taksi.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="taksi.css">
         <title>Taksi vijesti</title>
     </head>
     <body>
+        <img src="./assets/klix5.jpg" alt="Image">
 
-        <h1>NEPOSTENI TAKSISTA</h1>
+        <h3>NEPOSTENI TAKSISTA</h3>
 
         <p>Danas u vecernjim satima na Marijinom dvoru desio se incident. <br>
            Taksista M.E.(56) opljackao je zenu S.R(36). Ona je potvrdila da <br>
@@ -13,7 +15,8 @@
     i uhvatili su nadleznog. Izgubio je pravo na posao i otplatio je kaznu od <br>
 5 000 maraka. </p>
 
-<img src="./assets/klix5.jpg" alt="Image">
-<img src="./assets/klix6.jpg" alt="Image">
+
+
+
     </body>
 </html>
