--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="news-container">
                 <img src="./assets/klix1.jpg" alt="Image">
                 <div class="news-content">
-                    <h2>News Title</h2>
+                    <h2> BEZOBRAZNI TAKSISTA</h2>
                     <p>Taksista optuzen za pljackanje zene(36) u Sarajevu...</p>
                     <a href="taksi.html" class="read-more">Read more</a>
                 </div>
