--- a/taksi.html
+++ b/taksi.html
@@ -7,16 +7,21 @@
     <body>
         <img src="./assets/klix5.jpg" alt="Image">
 
-        <h3>NEPOSTENI TAKSISTA</h3>
+        <h3>BEZOBRAZNI TAKSISTA</h3>
 
         <p>Danas u vecernjim satima na Marijinom dvoru desio se incident. <br>
-           Taksista M.E.(56) opljackao je zenu S.R(36). Ona je potvrdila da <br>
+           Taksista M.E.(56) opljackao je zenu S.R.(36). Ona je potvrdila da <br>
         joj je prijetio nozem i da je morala predati pare. Uspjela je pozvati policiju <br>
     i uhvatili su nadleznog. Izgubio je pravo na posao i otplatio je kaznu od <br>
-5 000 maraka. </p>
+5 000 maraka. Osim noza kod taksiste je pronadjeno jos hladnog oruzja. <BR>
+Zbog posjedovanja neregistrovanih hladnih oruzja odlezat ce kaznu u zatvoru <br>
+od 6 mjeseci. Oruzje je oduzeto i zeni su vracene pare.  </p>
 
 
 
 
     </body>
+    <footer>
+        Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.
+    </footer>
 </html>
