--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
         <header>
          <!---<h1>Pocetna stranica<h1> /* --> 
                 <ul class="header-topics">
-                    <li>Vijesti</li>
-                    <li>Biznis</li>
-                    <li>Sport</li>
-                    <li>Magazin</li>
-                    <li>Lifestyle</li>
-                    <li>Scitech</li>
-                    <li>Auto</li>
-                    <li>Krizaljka</li>
-                    <li>Posao</li>
-                    <li>Forum</li>
+                    <li class="lokacija"><a href="vijesti.html" class="lokacija-a">Vijesti</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Biznis</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Sport</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Magazin</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Lifestyle</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Scitech</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Auto</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Krizaljka</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Posao</a></li>
+                    <li class="lokacija"><a href="#" class="lokacija-a">Forum</a></li>
+
+                 
                 </ul>
         </header>
 
