--- a/vijesti.html
+++ b/vijesti.html
@@ -1,5 +1,13 @@
 <DOCTYPE>
     <html>
-        <head></head>
+        <head>
+            <title>vijesti</title>
+        </head>
+        <body>
+
+        </body>
+        <footer>
+            
+        </footer>
     </html>
 </DOCTYPE>
