--- a/vijesti.html
+++ b/vijesti.html
@@ -1,13 +1,16 @@
 <DOCTYPE>
     <html>
         <head>
+            <link rel="stylesheet" href="taksi.css">
+
             <title>vijesti</title>
         </head>
         <body>
 
         </body>
         <footer>
-            
+            Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.
+
         </footer>
     </html>
 </DOCTYPE>
