--- a/vijesti.html
+++ b/vijesti.html
@@ -4,6 +4,7 @@
             <link rel="stylesheet" href="taksi.css">
 
             <title>vijesti</title>
+            <h4>VIJESTI</h4>
         </head>
         <body>
 
