--- a/vijesti.html
+++ b/vijesti.html
@@ -7,6 +7,11 @@
             <h4>VIJESTI</h4>
         </head>
         <body>
+            <img src="./assets/vijesti.jpg" alt="Image">
+            <h5>POGLEDAJTE VIJESTI ZA DANASNJI DAN</h5>
+            <img src="./assets/vijesti1.jpg" alt="Image">
+            <img src="./assets/vijesti2.jpg" alt="Image">
+            <img src="./assets/vijesti3.jpg" alt="Image">
 
         </body>
         <footer>
