--- a/vijesti.html
+++ b/vijesti.html
@@ -7,12 +7,16 @@
             <h4>VIJESTI</h4>
         </head>
         <body>
-            <img src="./assets/vijesti.jpg" alt="Image">
+        <!--   <img src="./assets/vijesti.jpg" alt="Image">
             <h5>POGLEDAJTE VIJESTI ZA DANASNJI DAN</h5>
             <img src="./assets/vijesti1.jpg" alt="Image">
+            <h6> VIJESTI ZA DANASNJI DAN</h6>
+
             <img src="./assets/vijesti2.jpg" alt="Image">
             <img src="./assets/vijesti3.jpg" alt="Image">
 
+            ovo moram doraditi tek sam pocela 
+--> 
         </body>
         <footer>
             Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.
