--- a/taksi.html
+++ b/taksi.html
@@ -9,8 +9,9 @@
 
         <p>Danas u vecernjim satima na Marijinom dvoru desio se incident. <br>
            Taksista M.E.(56) opljackao je zenu S.R(36). Ona je potvrdila da <br>
-        joj je prijetio nozem i da je morala predati pare. Uspjela je pozvati policiju <br>
-    i uhvatili su nadleznog. Izgubio je pravo na posao i otplatio je kaznu od <br>
+        joj je prijetio nozem i da je morala predati pare. Uspjela je pozvati <br> 
+        policiju  i uhvatili su nadleznog. Izgubio je pravo na posao i otplatio <br>
+        je kaznu od 
 5 000 maraka. </p>
     </body>
 </html>
