--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
         <title>NewsBA</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-      
+        <link rel="icon" type="image/x-icon" href="icon2.png">
+
 
     </head>
     <body>
         <header>
+                <img src="newsba.png" alt="ikona" width="230px" height="130px">
          <!---<h1>Pocetna stranica<h1> /* --> 
                 <ul class="header-topics">
                     <li class="lokacija"><a href="vijesti.html" class="lokacija-a">Vijesti</a></li>
@@ -29,6 +31,8 @@
                  
                 </ul>
         </header>
+
+        <!--<input type="search" id="search">-->
 
         <main>
             <div class="news">
