--- a/vijesti/sudar.html
+++ b/vijesti/sudar.html
@@ -14,6 +14,10 @@
     Siroki Brijeg. Rezultat je bio 12-0. Navijaci <br>
 su napravili pravo dobru atmosferu. Prvi gol je zabio<br>
 Krpic i to je vec diglo navijace na noge.<br>
+Sljedecu utakmicu Zeljeznicara mozete pogledati<br>
+u subotu protiv GOSK-a.Susret u Gabeli pocinje u<br>
+16:00. Kako se cini Zeljo ne ispada iz lige i penje se<br>
+prema vrhu.
  </p>
 
 
