--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
         </footer>
         <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
     </body>
 </html>
 
