--- a/vijesti/sudar.html
+++ b/vijesti/sudar.html
@@ -7,7 +7,7 @@
     <body>
         <img src="./assets/klix2.jpg" alt="Image">
 
-        <h3> POBJEDA ZELJEZNICARA    </h3>
+        <h3>  POBJED  </h3>
 
         <p>Na vecerasnjoj utakmici na Grbavici Zeljeznicar<br>
         je ostvario nevjerovatnu pobjedu nad FK<br>
