--- a/vijesti/zeljo.html
+++ b/vijesti/zeljo.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="taksi.css">
-        <title>Sudar vijesti</title>
+        <link rel="stylesheet" href="style.css">
+        <title>zeljeznicar vijesti</title>
     </head>
     <body>
-        <img src="./assets/klix2.jpg" alt="Image">
+        
 
-        <h3>    </h3>
+        <h3>  POBJEDA ZELJEZNICARA  </h3>
 
         <p>Na vecerasnjoj utakmici na Grbavici Zeljeznicar<br>
         je ostvario nevjerovatnu pobjedu nad FK<br>
