--- a/vijesti/dogovor.html
+++ b/vijesti/dogovor.html
@@ -2,8 +2,27 @@
 <html>
     <head>
         <title>Taksi vijesti</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
+        <header>
+            <img src="newsba.png" alt="ikona" width="230px" height="130px">
+     <!---<h1>Pocetna stranica<h1> /* --> 
+            <ul class="header-topics">
+                <li class="lokacija"><a href="vijesti.html" class="lokacija-a">Vijesti</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Biznis</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Sport</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Magazin</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Lifestyle</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Scitech</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Auto</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Krizaljka</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Posao</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Forum</a></li>
+
+             
+            </ul>
+    </header>
 
         <h1>POVIJESNI MIRNI DOGOVOR OKONČAVA DESETLJEĆA POLITIČKIH NAPETOSTI</h1>
 
