--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="lokacija"><a href="#" class="lokacija-a">Lifestyle</a></li>
                     <li class="lokacija"><a href="#" class="lokacija-a">Scitech</a></li>
                     <li class="lokacija"><a href="#" class="lokacija-a">Auto</a></li>
-                    <li class="lokacija"><a href="#" class="lokacija-a">Krizaljka</a></li>
+                    <li class="lokacija"><a href="https://www.klix.ba/krizaljka/59" class="lokacija-a">Krizaljka</a></li>
                     <li class="lokacija"><a href="#" class="lokacija-a">Posao</a></li>
                     <li class="lokacija"><a href="#" class="lokacija-a">Forum</a></li>
 
