--- a/vijesti/dogovor.html
+++ b/vijesti/dogovor.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Taksi vijesti</title>
-        <link rel="stylesheet" href="../style.css">
-    </head>
+        <head>
+            <meta charset="UTF-8">
+            <link rel="shortcut icon" type="x-icon" href="../viber_image_2024-04-23_22-30-20-279.png">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="../style.css">
+            <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
+            <title>NewsBA</title>
+            <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+            <link rel="icon" type="image/x-icon" href="../doodle-freehand-drawing-of-bosnia-map-free-png (2).png">
+            <link rel="stylesheet" href="univerzalno.css">
+        </head>
     <body>
         <header>
-            <img src="newsba.png" alt="ikona" width="230px" height="130px">
+            <img src="../newsba.png" alt="ikona" width="230px" height="130px" onclick=window.location.href="../index.html">
      <!---<h1>Pocetna stranica<h1> /* --> 
             <ul class="header-topics">
-                <li class="lokacija"><a href="vijesti.html" class="lokacija-a">Vijesti</a></li>
+                <li class="lokacija"><a href="#" class="lokacija-a">Vijesti</a></li>
                 <li class="lokacija"><a href="#" class="lokacija-a">Biznis</a></li>
                 <li class="lokacija"><a href="#" class="lokacija-a">Sport</a></li>
                 <li class="lokacija"><a href="#" class="lokacija-a">Magazin</a></li>
@@ -24,22 +32,63 @@
             </ul>
     </header>
 
-        <h1>POVIJESNI MIRNI DOGOVOR OKONČAVA DESETLJEĆA POLITIČKIH NAPETOSTI</h1>
+    <main>
 
-        <p> Danas je svijet svjedočio historijskom trenutku kako su dugogodišnji suparnici,<br>
-            nakon intenzivnih pregovora i diplomatskih napora, postigli sporazum koji bi <br>
-            mogao okončati jedno od najdugotrajnijih političkih sukoba modernog doba. <br>
-            Ovaj mirni dogovor, postignut nakon desetljeća neprijateljstva i napetosti,<br>
-             predstavlja veliki korak prema stabilnosti i pomirenju u regiji. Pregovarači <br>
-             su istaknuli da je ovo postignuće rezultat hrabrosti, odlučnosti i spremnosti <br>
-             za kompromis, te da otvara put ka boljoj budućnosti za sve stanovnike regije.<br>
-              Međunarodna zajednica pozdravlja ovaj dogovor kao primjer kako se dugotrajni<br>
-               sukobi mogu riješiti putem dijaloga i pregovora, umjesto kroz sukobe i nasilje.<br>
-                Ostanite s nama kako bismo vas dalje informirali o implementaciji ovog <br>
-                historijskog sporazuma i njegovim potencijalnim posljedicama na političku <br>
-                scenu globalno.</p>
+            <div class="details">
+                <div class="details-text">
+                <h1>Dogovor okoncava politicku napetost  </h3>
+                <p class="text">
+                    Danas je svijet svjedočio historijskom trenutku kako su dugogodišnji suparnici
+                     nakon intenzivnih pregovora i diplomatskih napora, postigli sporazum koji bi 
+                     mogao okončati jedno od najdugotrajnijih političkih sukoba modernog doba. 
+                     Ovaj mirni dogovor, postignut nakon desetljeća neprijateljstva i napetosti,
+                      predstavlja veliki korak prema stabilnosti i pomirenju u regiji. Pregovarači 
+                      su istaknuli da je ovo postignuće rezultat hrabrosti, odlučnosti i spremnosti 
+                      za kompromis, te da otvara put ka boljoj budućnosti za sve stanovnike regije.
+                       Međunarodna zajednica pozdravlja ovaj dogovor kao primjer kako se dugotrajni
+                        sukobi mogu riješiti putem dijaloga i pregovora, umjesto kroz sukobe i nasilje.
+                         Ostanite s nama kako bismo vas dalje informirali o implementaciji ovog 
+                         historijskog sporazuma i njegovim potencijalnim posljedicama na političku 
+                         scenu globalno.
+                </p>
+            </div>
+            <img src="../assets/mir.jpg" alt="mir">
+            </div>
 
+            <div class="submit">
+            <textarea name="textarea" id="1" cols="50" rows="5" placeholder="Ostavi komentar..."></textarea>
+            
+            <button  onclick=windows.location.href="../index.html">Submit</button>
+        </div>
+        </main>
 
 
     </body>
+    <footer>
+        <ul class="footerlokacije">
+            <li class="lokacija"><a href="#" class="lokacija-a">Početna</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Dojavite vijest</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Impressum</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Komentari</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Kontakt</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">O nama</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Oglašavanje</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Privatnost</a></li>
+            <li class="lokacija"><a href="#" class="lokacija-a">Sigurnost</a></li>
+        </ul>
+
+        <ul class="footerikone">
+            <li class="icon">Pratite nas</li>
+
+            <div class="alignemnt-icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            </div>
+        </ul>
+
+        <p>Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
+
+    </footer>
 </html>
