--- a/vijesti/sudar.html
+++ b/vijesti/sudar.html
@@ -14,7 +14,7 @@
         </head>
     <body>
         <header>
-            <img src="../newsba.png" alt="ikona" width="230px" height="130px">
+            <img src="../newsba.png" alt="ikona" width="230px" height="130px" onclick=window.location.href="../index.html">
      <!---<h1>Pocetna stranica<h1> /* --> 
             <ul class="header-topics">
                 <li class="lokacija"><a href="#" class="lokacija-a">Vijesti</a></li>
@@ -35,25 +35,33 @@
     <main>
 
             <div class="details">
+                <div class="details-alignemnt">
                 <div class="details-text">
                 <h1>  Dramatična Nesreća na Autocesti  </h3>
-                <p>Promet na autocesti je zaustavljen nakon što su se kamion i<br>
-                putničko vozilo sudarili u teškoj nesreći koja je izazvala <br>
-                ozbiljne posljedice. Prema izvješćima svjedoka, sudar se <br>
-                dogodio usred prometnog špica, kad je kamion iz nepoznatih<br>
-                razloga izgubio kontrolu i udario u putničko vozilo. Hitne<br>
-                službe su odmah intervenirale na mjestu nesreće, pružajući <br>
-                pomoć ozlijeđenima i osiguravajući sigurnost na cesti. Lokalne<br>
-                vlasti upozoravaju vozače na zastoje i preusmjeravanja dok se<br>
-                čisti cesta i istražuju uzroci nesreće. Ovaj dramatični <br>
-                sudar podsjeća sve vozače na važnost opreznosti i poštivanja<br>
-                prometnih pravila kako bi se spriječile slične tragedije u<br>
-                budućnosti. Ostanite s nama za daljnje informacije o ovoj <br>
+                <p class="text">Promet na autocesti je zaustavljen nakon što su se kamion i
+                putničko vozilo sudarili u teškoj nesreći koja je izazvala 
+                ozbiljne posljedice. Prema izvješćima svjedoka, sudar se 
+                dogodio usred prometnog špica, kad je kamion iz nepoznatih
+                razloga izgubio kontrolu i udario u putničko vozilo. Hitne
+                službe su odmah intervenirale na mjestu nesreće, pružajući 
+                pomoć ozlijeđenima i osiguravajući sigurnost na cesti. Lokalne
+                vlasti upozoravaju vozače na zastoje i preusmjeravanja dok se
+                čisti cesta i istražuju uzroci nesreće. Ovaj dramatični 
+                sudar podsjeća sve vozače na važnost opreznosti i poštivanja
+                prometnih pravila kako bi se spriječile slične tragedije u
+                budućnosti. Ostanite s nama za daljnje informacije o ovoj 
                 nesreći i njenim posljedicama na prometnoj mreži.
                 </p>
             </div>
             <img src="../assets/sudar.jpg" alt="Sudar">
             </div>
+            </div>
+
+            <div class="submit">
+            <textarea name="textarea" id="1" cols="50" rows="5" placeholder="Ostavi komentar..."></textarea>
+            
+            <button onclick=windows.location.href="../index.html">Submit</button>
+        </div>
         </main>
 
 
