--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-                <img src="newsba.png" alt="ikona" width="230px" height="130px">
+                <img src="newsba.png" alt="ikona" width="230px" height="130px" class="Header-Logo">
          <!---<h1>Pocetna stranica<h1> /* --> 
                 <ul class="header-topics">
                     <li class="lokacija"><a href="vijesti.html" class="lokacija-a">Vijesti</a></li>
