--- a/vijesti/sudar.html
+++ b/vijesti/sudar.html
@@ -14,7 +14,7 @@
         </head>
     <body>
         <header>
-            <img src="../newsba.png" alt="ikona" width="230px" height="130px" onclick=window.location.href="../index.html">
+           <img src="../newsba.png" alt="ikona" width="230px" height="130px" onclick=window.location.href="../index.html" class="Header-Logo">
      <!---<h1>Pocetna stranica<h1> /* --> 
             <ul class="header-topics">
                 <li class="lokacija"><a href="#" class="lokacija-a">Vijesti</a></li>
