--- a/vijesti/zeljo.html
+++ b/vijesti/zeljo.html
@@ -15,7 +15,6 @@
     <body>
         <header>
            <img src="../newsba.png" alt="ikona" width="230px" height="130px" onclick=window.location.href="../index.html" class="Header-Logo">
-     <!---<h1>Pocetna stranica<h1> /* --> 
             <ul class="header-topics">
                 <li class="lokacija"><a href="#" class="lokacija-a">Vijesti</a></li>
                 <li class="lokacija"><a href="#" class="lokacija-a">Biznis</a></li>
@@ -82,11 +81,12 @@
         <ul class="footerikone">
             <li class="icon">Pratite nas</li>
 
+            
             <div class="alignemnt-icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-x-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
+                <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </ul>
 
