--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                 <img src="newsba.png" alt="ikona" width="230px" height="130px" class="Header-Logo">
                 <ul class="header-topics">
                     <li class="lokacija"><a href="index.html" class="lokacija-a">Vijesti</a></li>
-                    <li class="lokacija"><a href="biznis.html" class="lokacija-a">Biznis</a></li>
-                    <li class="lokacija"><a href="sport.html" class="lokacija-a">Sport</a></li>
-                    <li class="lokacija"><a href="magazin.html" class="lokacija-a">Magazin</a></li>
-                    <li class="lokacija"><a href="lifestyle.html" class="lokacija-a">Lifestyle</a></li>
-                    <li class="lokacija"><a href="scitech.html" class="lokacija-a">Scitech</a></li>
-                    <li class="lokacija"><a href="auto.html" class="lokacija-a">Auto</a></li>
+                    <li class="lokacija"><a href="./vijesti/biznis.html" class="lokacija-a">Biznis</a></li>
+                    <li class="lokacija"><a href="./vijesti/sport.html" class="lokacija-a">Sport</a></li>
+                    <li class="lokacija"><a href="./vijesti/magazin.html" class="lokacija-a">Magazin</a></li>
+                    <li class="lokacija"><a href="./vijesti/lifestyle.html" class="lokacija-a">Lifestyle</a></li>
+                    <li class="lokacija"><a href="./vijesti/scitech.html" class="lokacija-a">Scitech</a></li>
+                    <li class="lokacija"><a href="./vijesti/auto.html" class="lokacija-a">Auto</a></li>
                     <li class="lokacija"><a href="https://www.klix.ba/krizaljka/59" class="lokacija-a">Krizaljka</a></li>
-                    <li class="lokacija"><a href="posao.html" class="lokacija-a">Posao</a></li>
-                    <li class="lokacija"><a href="forum.html" class="lokacija-a">Forum</a></li>
+                    <li class="lokacija"><a href="./vijesti/.html" class="lokacija-a">Posao</a></li>
+                    <li class="lokacija"><a href="./vijesti/forum.html" class="lokacija-a">Forum</a></li>
                 </ul>
         </header>
         
@@ -52,15 +52,15 @@
 
         <footer>
             <ul class="footerlokacije">
-                <li class="lokacija"><a href="pocetna.html" class="lokacija-a">Početna</a></li>
-                <li class="lokacija"><a href="dojava.html" class="lokacija-a">Dojavite vijest</a></li>
-                <li class="lokacija"><a href="impressum.html" class="lokacija-a">Impressum</a></li>
-                <li class="lokacija"><a href="komentari.html" class="lokacija-a">Komentari</a></li>
-                <li class="lokacija"><a href="kontakt.html" class="lokacija-a">Kontakt</a></li>
-                <li class="lokacija"><a href="onama.html" class="lokacija-a">O nama</a></li>
-                <li class="lokacija"><a href="oglasavanje.html" class="lokacija-a">Oglašavanje</a></li>
-                <li class="lokacija"><a href="privatnost.html" class="lokacija-a">Privatnost</a></li>
-                <li class="lokacija"><a href="sigurnost.html" class="lokacija-a">Sigurnost</a></li>
+                <li class="lokacija"> <a href="./vijesti/pocetna.html" class="lokacija-a"></a>Početna </a></li>
+                <li class="lokacija"><a href="./vijesti/dojava.html" class="lokacija-a">Dojavite vijest</a></li>
+                <li class="lokacija"><a href="./vijesti/impressum.html" class="lokacija-a">Impressum</a></li>
+                <li class="lokacija"><a href="./vijesti/komentari.html" class="lokacija-a">Komentari</a></li>
+                <li class="lokacija"><a href="./vijesti/kontakt.html" class="lokacija-a">Kontakt</a></li>
+                <li class="lokacija"><a href="./vijesti/onama.html" class="lokacija-a">O nama</a></li>
+                <li class="lokacija"><a href="./vijesti/oglasavanje.html" class="lokacija-a">Oglašavanje</a></li>
+                <li class="lokacija"><a href="./vijesti/privatnost.html" class="lokacija-a">Privatnost</a></li>
+                <li class="lokacija"><a href="./vijesti/sigurnost.html" class="lokacija-a">Sigurnost</a></li>
             </ul>
 
             <ul class="footerikone">
