--- a/vijesti/biznis.html
+++ b/vijesti/biznis.html
@@ -16,7 +16,7 @@
         <header>
                 <img src="newsba.png" alt="ikona" width="230px" height="130px" class="Header-Logo">
                 <ul class="header-topics">
-                    <li class="lokacija"><a href="index.html" class="lokacija-a">Vijesti</a></li>
+                    <li class="lokacija"><a href="../index.html" class="lokacija-a">Vijesti</a></li>
                     <li class="lokacija"><a href="biznis.html" class="lokacija-a">Biznis</a></li>
                     <li class="lokacija"><a href="sport.html" class="lokacija-a">Sport</a></li>
                     <li class="lokacija"><a href="magazin.html" class="lokacija-a">Magazin</a></li>
