--- a/vijesti/zeljo.html
+++ b/vijesti/zeljo.html
@@ -16,16 +16,16 @@
         <header>
            <img src="../newsba.png" alt="ikona" width="230px" height="130px" onclick=window.location.href="../index.html" class="Header-Logo">
             <ul class="header-topics">
-                <li class="lokacija"><a href="#" class="lokacija-a">Vijesti</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Biznis</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Sport</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Magazin</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Lifestyle</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Scitech</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Auto</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Krizaljka</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Posao</a></li>
-                <li class="lokacija"><a href="#" class="lokacija-a">Forum</a></li>
+                <li class="lokacija"><a href="../index.html" class="lokacija-a">Vijesti</a></li>
+                <li class="lokacija"><a href="biznis.html" class="lokacija-a">Biznis</a></li>
+                <li class="lokacija"><a href="sport.html" class="lokacija-a">Sport</a></li>
+                <li class="lokacija"><a href="magazin.html" class="lokacija-a">Magazin</a></li>
+                <li class="lokacija"><a href="lifestyle.html" class="lokacija-a">Lifestyle</a></li>
+                <li class="lokacija"><a href="scitech.html" class="lokacija-a">Scitech</a></li>
+                <li class="lokacija"><a href="auto.html" class="lokacija-a">Auto</a></li>
+                <li class="lokacija"><a href="https://www.klix.ba/krizaljka/59" class="lokacija-a">Krizaljka</a></li>
+                <li class="lokacija"><a href="posao.html" class="lokacija-a">Posao</a></li>
+                <li class="lokacija"><a href="forum.html" class="lokacija-a">Forum</a></li>
 
              
             </ul>
