--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <li class="lokacija"><a href="./vijesti/scitech.html" class="lokacija-a">Scitech</a></li>
                     <li class="lokacija"><a href="./vijesti/auto.html" class="lokacija-a">Auto</a></li>
                     <li class="lokacija"><a href="https://www.klix.ba/krizaljka/59" class="lokacija-a">Krizaljka</a></li>
-                    <li class="lokacija"><a href="./vijesti/.html" class="lokacija-a">Posao</a></li>
-                    <li class="lokacija"><a href="./vijesti/forum.html" class="lokacija-a">Forum</a></li>
+                    <li class="lokacija"><a href="https://posao.klix.ba/" class="lokacija-a">Posao</a></li>
+                    <li class="lokacija"><a href="https://forum.klix.ba/" class="lokacija-a">Forum</a></li>
                 </ul>
         </header>
         
@@ -52,7 +52,7 @@
 
         <footer>
             <ul class="footerlokacije">
-                <li class="lokacija"> <a href="./vijesti/pocetna.html" class="lokacija-a"></a>Početna </a></li>
+                <li class="lokacija"> <a href="index.html" class="lokacija-a"></a>Početna </a></li>
                 <li class="lokacija"><a href="./vijesti/dojava.html" class="lokacija-a">Dojavite vijest</a></li>
                 <li class="lokacija"><a href="./vijesti/impressum.html" class="lokacija-a">Impressum</a></li>
                 <li class="lokacija"><a href="./vijesti/komentari.html" class="lokacija-a">Komentari</a></li>
