--- a/vijesti/biznis.html
+++ b/vijesti/biznis.html
@@ -28,16 +28,11 @@
                     <li class="lokacija"><a href="forum.html" class="lokacija-a">Forum</a></li>
                 </ul>
         </header>
-        
+
         <main>
             <div class="news1">
               <div class="container-raspored">
                     <div class="container"></div>
-                </div>
-
-                <div class="bigContainer-raspored">
-                    <input type="text" placeholder="search" id="search">
-                        <div class="bigContainer"></div>
                 </div>
             </div>
 
@@ -79,7 +74,7 @@
             <p>Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
 
         </footer>
-        <script src="script.js"></script>
+        <script src="../java/biznis.js"></script>
         <script src="https://kit.fontawesome.com/4ac4a9c811.js" crossorigin="anonymous"></script>
     </body>
 </html>
