--- a/vijesti/sport.html
+++ b/vijesti/sport.html
@@ -35,6 +35,11 @@
               <div class="container-raspored">
                     <div class="container"></div>
                 </div>
+
+                <div class="bigContainer-raspored">
+                    <input type="text" placeholder="search" id="search">
+                        <div class="bigContainer"></div>
+                </div>
             </div>
 
           
