--- a/vijesti/scitech.html
+++ b/vijesti/scitech.html
@@ -34,11 +34,15 @@
               <div class="container-raspored">
                     <div class="container"></div>
                 </div>
+
+                <div class="bigContainer-raspored">
+                    <input type="text" placeholder="search" id="search">
+                        <div class="bigContainer"></div>
+                </div>
             </div>
 
           
         </main>
-
 
 
 
