--- a/vijesti/auto.html
+++ b/vijesti/auto.html
@@ -30,11 +30,15 @@
         </header>
         
        
-  
         <main>
             <div class="news1">
               <div class="container-raspored">
                     <div class="container"></div>
+                </div>
+
+                <div class="bigContainer-raspored">
+                    <input type="text" placeholder="search" id="search">
+                        <div class="bigContainer"></div>
                 </div>
             </div>
 
