--- a/vijesti/sport.html
+++ b/vijesti/sport.html
@@ -24,8 +24,8 @@
                     <li class="lokacija"><a href="scitech.html" class="lokacija-a">Scitech</a></li>
                     <li class="lokacija"><a href="auto.html" class="lokacija-a">Auto</a></li>
                     <li class="lokacija"><a href="https://www.klix.ba/krizaljka/59" class="lokacija-a">Krizaljka</a></li>
-                    <li class="lokacija"><a href="posao.html" class="lokacija-a">Posao</a></li>
-                    <li class="lokacija"><a href="forum.html" class="lokacija-a">Forum</a></li>
+                    <li class="lokacija"><a href="https://posao.klix.ba/" class="lokacija-a">Posao</a></li>
+                    <li class="lokacija"><a href="https://forum.klix.ba/" class="lokacija-a">Forum</a></li>
                 </ul>
         </header>
         
