--- a/vijesti/zeljo.html
+++ b/vijesti/zeljo.html
@@ -56,9 +56,9 @@
             </div>
 
             <div class="submit">
-            <textarea name="textarea" id="1" cols="50" rows="5" placeholder="Ostavi komentar..."></textarea>
+            <textarea name="textarea" id="kommentar1" cols="50" rows="5" placeholder="Ostavi komentar..."></textarea>
             
-            <button  onclick=windows.location.href="../index.html">Submit</button>
+            <button  onclick="spasikommnetar()">Submit</button>
         </div>
         </main>
 
@@ -92,4 +92,5 @@
         <p>Copyright 2000-2023 NewsBA d.o.o. Sarajevo. ISSN 0623-3094. Sva prava zadržana. Zabranjeno preuzimanje sadržaja bez dozvole izdavača.</p>
 
     </footer>
+    <script type="text/javascrpit" src="komentari.js"></script>
 </html>
