--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <footer>
             <ul class="footerlokacije">
-                <li class="lokacija"> <a href="index.html" class="lokacija-a"></a>Početna </a></li>
+                <li class="lokacija"><a href="./vijesti/index.html" class="lokacija-a"></a>Početna </a></li>
                 <li class="lokacija"><a href="./vijesti/dojava.html" class="lokacija-a">Dojavite vijest</a></li>
                 <li class="lokacija"><a href="./vijesti/impressum.html" class="lokacija-a">Impressum</a></li>
                 <li class="lokacija"><a href="./vijesti/komentari.html" class="lokacija-a">Komentari</a></li>
@@ -68,10 +68,10 @@
 
             
              <div class="alignemnt-icons">
-                <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com" target="_blank" style="text-decoration: none; color: white;"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://x.com" target="_blank" style="text-decoration: none; color: white;"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://instagram.com" target="_blank" style="text-decoration: none; color: white;"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://youtube.com" target="_blank" style="text-decoration: none; color: white;"><i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
             </ul>
